--- a/src/background.html
+++ b/src/background.html
@@ -1,12 +1,12 @@
 <html>
 <!--
 /*!
-* CSSViewer, A Google Chrome Extension for fellow web developers, web designers, and hobbyists.
-* https://github.com/cssviewer/cssviewer
-* https://chrome.google.com/webstore/detail/cssviewer/ggfgijbpiheegefliciemofobhmofgce
+* CSSViewer, A Mozilla Firefox Web Extension for fellow web developers, web designers, and hobbyists.
+* https://github.com/mohsenkhanpour/CSSViewer
+* 
 *
-* This source code is licensed under the GNU General Public License,
-* Version 2. See the file COPYING for more details.
+* This source code is licensed under the Mozilla Public License,
+* Version 2.0.
 */
 //-->
 	<head>
