--- a/src/option.html
+++ b/src/option.html
@@ -2,14 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--
 /*!
-* CSSViewer, A Google Chrome Extension for fellow web developers, web designers, and hobbyists.
-* https://github.com/cssviewer/cssviewer
-* https://chrome.google.com/webstore/detail/cssviewer/ggfgijbpiheegefliciemofobhmofgce
+* CSSViewer, A Mozilla Firefox Web Extension for fellow web developers, web designers, and hobbyists.
+* https://github.com/mohsenkhanpour/CSSViewer
+* 
 *
-* This source code is licensed under the GNU General Public License,
-* Version 2. See the file COPYING for more details.
-*
-* Html and css of this page is questionable, ik. I'm a developer, aright.
+* This source code is licensed under the Mozilla Public License,
+* Version 2.0.
+* Mohsen Khanpour, 2018
 */
 //-->
 <head>
