--- a/src/option.html
+++ b/src/option.html
@@ -24,26 +24,26 @@
     <td>
 <h2 style="font-size: 1.2em;font-family: Arial,sans-serif;padding: .5em 0 .5em ;">CSSViewer Extension 1.7</h2>    
 <p align="justify"> 
-CSSViewer is a simple CSS property viewer for Google chrome originally made by <a href="https://addons.mozilla.org/en-US/firefox/user/9866/" target="_blank">Nicolas Huon</a> as a FireFox addon.
+CSSViewer is a simple CSS property viewer for Firefox Quantum originally made by <a href="https://addons.mozilla.org/en-US/firefox/user/9866/" target="_blank">Nicolas Huon</a> as a Firefox addon.
 <br />
 <br />
 CSSViewer source code is publicly available on GitHub for anyone to help and contribute. <br /> 
-<a href="https://github.com/miled/cssviewer" target="_blank">https://github.com/miled/cssviewer</a>.
+<a href="https://github.com/mohsenkhanpour/CSSViewer" target="_blank">https://github.com/mohsenkhanpour/CSSViewer</a>.
 </p> 
 <br />
 <img style="border: 1px solid #DDDDDD;margin: 5px;padding:0px;" src="img/option-demo.gif" align="right" />
 <h4 style="font-size: 0.9em;font-family: Arial,sans-serif;padding: 0;margin:0;">How to use :</h4>    
 <ul>
-	<li>CSSViewer shows the css parameters of any element in a web page. To enable/disable CSSViewer, simply click the toolbar icon and then hover any element on you want to inspect in current page.<br /><br /></li>
+	<li>CSSViewer shows the CSS parameters of any element in a web page. To enable/disable CSSViewer, simply click the toolbar icon and then hover any element on you want to inspect in current page.<br /><br /></li>
 	<li>For quick usage you may use the available keyboard shortcuts: 
 		<br /> 
-		<br /> &nbsp; [<b>f</b>] Freeze/Unfreeze the widget in place, 
-		<br /> &nbsp; [<b>c</b>] Shows selected element simpleCssDefinition on a modal, and 
-		<br /> &nbsp; [<b>esc</b>] Disable the viewer.
+		<br /> &nbsp; [<b>F</b>] Freeze/Unfreeze the widget in place, 
+		<br /> &nbsp; [<b>C</b>] Shows selected element simpleCssDefinition on a modal, and 
+		<br /> &nbsp; [<b>ESC</b>] Disable the viewer.
 		<br />
 		<br />
 		</li>
-	<li>To display the CSS definition, open Google Chrome console [F12] then right click on the element you're hovering: 
+	<li>To display the CSS definition, open Mozilla Firefox console [F12] then right click on the element you're hovering: 
 		<br /> 
 		<br /> &nbsp; <b>CSSViewer console</b> &gt; <b>element.simpleCssDefinition</b>.
 	</li>
@@ -59,29 +59,23 @@ CSSViewer source code is publicly available on GitHub for anyone to help and con
 	<!-- .. besides, I couldn't care less about your data p -->
 </p>
 
-<h4 style="font-size: 0.9em;font-family: Arial,sans-serif;padding: 1em 0 0;margin-bottom:5px;">How to uninstall :</h4>  
+<h4 style="font-size: 0.9em;font-family: Arial,sans-serif;padding: 1em 0 0;margin-bottom:5px;">How to Uninstall :</h4>  
 <ol>
-	<li>Click the wrench icon on the browser toolbar.</li>
-	<li>Click <strong>Tools</strong>.</li>
+	<li>Click Firefox Menu.</li>
+	<li>Click <strong>Add-ons</strong>.</li>
 	<li>Select <strong>Extensions</strong>.</li>
-	<li>Find the CSSViewer extension then click <strong>Uninstall</strong>.</li>
+	<li>Find the CSSViewer extension then click <strong>Remove</strong>.</li>
 </ol>
 
 <h4 style="font-size: 0.9em;font-family: Arial,sans-serif; ">Changelog:</h4>
 <div style="margin-left:15px">
-	<strong>1.7</strong>: 04/2017 - Add keyboard shortcuts and enable the viewer for local files.<br />
-	<strong>1.6</strong>: 11/2014 - Add inspect element to menu. Add generate css definition. Fix few issues with auto-positioning. reFix an issue with chrome/38.<br />
-	<strong>1.5</strong>: 10/2015 - Hotfix an issue with Chrome/38.0.2125.101.<br />
-	<strong>1.4</strong>: 02/2013 - A bunch of minor changes in order to release CSSViewer as an open source project at <a href="https://github.com/miled/cssviewer" target="_blank">Github</a>.<br />
-	<strong>1.3</strong>: 08/2011 - Support some CSS3 properties under the "Effects' category.<br />
-	<strong>1.2</strong>: 07/2011 - Fix some minor bugs.<br />
-	<strong>1.1</strong>: 03/2010 - Initial version.<br />
+	<strong>1.0</strong>: 2018/06/06 - Initial version.<br />
 </div>
 
 <h4 style="font-size: 0.9em;font-family: Arial,sans-serif; ">Known Issues:</h4>
 <div style="margin-left:15px">
-	CSSViewer will not work in any opened tabs before installing it nor in the Google chrome store.<br />
-	The style may broke sometimes depending on the site you are surfing.<br />
+	CSSViewer will not work in any opened tabs before installing it nor in the Mozilla Addons page.<br />
+	The style may break sometimes depending on the site you are surfing.<br />
 </div>
 
 	<br /> 
@@ -91,7 +85,7 @@ CSSViewer source code is publicly available on GitHub for anyone to help and con
 		<em>CSSViewer automatically display this page when the extension is updated to a new version.</em>
 	</p>
 	<p align="justify">
-		<em>This chrome extension is a straight port of the Firefox CSSViewer add-on with minor enhancements. Credits goes to the original developer and contributors.</em>
+		<em>This Firefox extension is a straight port of the Chrome CSSViewer add-on with minor enhancements. Credits goes to the original developer and contributors.</em>
 	</p>
     </td>
   </tr>
